# Chibicc

./: .gitignore  CMakeLists.txt  LICENSE  Main.cpp  README.md  test.sh
include/: astnode.h  codegen.h  context.h  diagnostic.h  parser.h  tokenize.h  type.h
lib/: codegen.cpp  diagnostic.cpp  parser.cpp  tokenize.cpp  type.cpp
